test/sema/extern_functions_errors.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:1: error: function 'foo' has invalid 'customType' type
extern fn foo() -> customType;

// CHECK: [[# @LINE + 1 ]]:15: error: parameter 'a' has invalid 'customType' type
extern fn bar(a:customType) -> void;

// CHECK: [[# @LINE + 1 ]]:32: error: vararg '...' can only be in the last argument
extern fn argvar1(a:int, ... , ...) -> void;

// CHECK: [[# @LINE + 1 ]]:31: error: vararg '...' can only be in the last argument
extern fn argvar2(a:int, ..., b:int) -> void;

fn main() -> void {}
// CHECK-NOT: {{.*}}
